# Poisson-Reconstruction

./: .gitignore  CMakeLists.txt  README.md  compile.sh
Data/: AfterProcess.ply
src/: CMakeLists.txt  PoissonRecon.cpp  SSDRecon.cpp  displaywindow.cpp  displaywindow.h
src/JPEG/: CMakeLists.txt
src/PNG/: CMakeLists.txt
src/Possion/: AdaptiveTreeVisualization.cpp  CMakeLists.txt  ImageStitching.cpp
src/Possion/include/: MyMiscellany.h  PNG.h
src/ZLIB/: CMakeLists.txt
