add_subdirectory(PNG)
set(PNG_INCLUDE_DIRS ${PNG_INCLUDE_DIRS} PARENT_SCOPE)
set(PNG_LIBS ${PNG_LIBS} PARENT_SCOPE)

add_subdirectory(JPEG)
set(JPEG_INCLUDE_DIRS ${JPEG_INCLUDE_DIRS} PARENT_SCOPE)
set(JPEG_LIBS ${JPEG_LIBS} PARENT_SCOPE)

add_subdirectory(ZLIB)
set(ZLIB_INCLUDE_DIRS ${ZLIB_INCLUDE_DIRS} PARENT_SCOPE)
set(ZLIB_LIBS ${ZLIB_LIBS} PARENT_SCOPE)

add_subdirectory(Possion)
set(POSSION_INCLUDE_DIRS ${POSSION_INCLUDE_DIRS} PARENT_SCOPE)
set(POSSION_LIBS ${POSSION_LIBS} PARENT_SCOPE)
